# TopDownShooter

./: README.md  a  config.toml  pyproject.toml  requirements.txt  topdown_v0.3.1.patch  versions.md
lang/en/: ui.lang
lang/ua/: ui.lang
src/topdown/: __init__.py  main.py
src/topdown/app/: game_app.py
src/topdown/core/: config.py  logging_ext.py  types.py
src/topdown/entities/: __init__.py  bullet.py  effects.py  enemy.py  player.py
src/topdown/i18n/: manager.py
src/topdown/render/: atlas.py  tile_renderer.py
src/topdown/systems/: __init__.py  aiming.py  combat.py  enemy_ai.py  player_controller.py
src/topdown/world/: camera.py  collision.py  generation.py  map_model.py  presets.py  raycast.py  static_maps.py
tests/: test_aiming.py  test_camera.py  test_combat.py  test_config.py  test_cover_nodes.py  test_enemy_ai.py  test_enemy_hp_debug.py  test_generation.py  test_player_movement.py  test_player_state.py
